# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.234 2014/04/12 00:37:09 dlan Exp $

*xen-tools-4.4.0-r1 (12 Apr 2014)
*xen-tools-4.3.2-r1 (12 Apr 2014)
*xen-tools-4.2.4-r1 (12 Apr 2014)

  12 Apr 2014; Yixun Lan <dlan@gentoo.org> +xen-tools-4.2.4-r1.ebuild,
  +xen-tools-4.3.2-r1.ebuild, +xen-tools-4.4.0-r1.ebuild:
  bump upstream patches, add IUSE=system-qemu to 4.4.x

  04 Apr 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.4.0.ebuild:
  Add revised configure option, fixes Bug #506072 by Sven

  24 Mar 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.4.0.ebuild:
  re bump; keyword ~arm, update deps, drop py2.6 support, drop IUSE xend,
  improvements to configure phase, tidy up and style improvements by dlan. Re-
  set SLOT for libgcrypt, drop leftover elog msg re xend

*xen-tools-4.4.0 (23 Mar 2014)

  23 Mar 2014; Yixun Lan <dlan@gentoo.org> +xen-tools-4.4.0.ebuild,
  +files/xen-tools-4.4-api-fix.patch, +files/xen-4.4-nostrip.patch,
  +files/xen-4.4-qemu-bridge.patch, files/xenstored.initd:
  bump to 4.4.0

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> xen-tools-4.2.3-r1.ebuild,
  xen-tools-4.2.4.ebuild, xen-tools-4.3.1-r5.ebuild, xen-tools-4.3.1-r6.ebuild,
  xen-tools-4.3.2.ebuild:
  Update libgcrypt dep to use slot :0.

  23 Feb 2014; Yixun Lan <dlan@gentoo.org> files/xenstored.initd:
  fix bug #502056, thanks KK <klaus.kreil at univie.ac.at>

  21 Feb 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.2.3-r1.ebuild,
  xen-tools-4.2.4.ebuild, xen-tools-4.3.2.ebuild:
  correct typos, tidy

  20 Feb 2014; Yixun Lan <dlan@gentoo.org>
  -files/xen-4-CVE-2013-0215-XSA-38.patch,
  -files/xen-4-CVE-2013-1919-XSA-46.patch,
  -files/xen-4-CVE-2013-1922-XSA-48.patch,
  -files/xen-4-CVE-2013-1952-XSA-49.patch,
  -files/xen-4-CVE-2013-1952-XSA_49.patch,
  -files/xen-4-CVE-2013-2072-XSA-56.patch,