@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/xen-tools-4.3.1-r6.ebuild,v 1.2 2014/03/01 23:06:15 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/xen-tools-4.3.1-r6.ebuild,v 1.3 2014/04/12 08:38:00 idella4 Exp $
 
 EAPI=5
 
@@ -55,7 +55,7 @@ DEPEND="dev-libs/lzo:2
 	sys-devel/dev86
 	dev-lang/perl
 	app-misc/pax-utils
-	dev-python/markdown
+	dev-python/markdown[${PYTHON_USEDEP}]
 	doc? (
 		app-doc/doxygen
 		dev-tex/latex2html[png,gif]
