@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/xen-tools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.234 2014/04/12 00:37:09 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.235 2014/04/12 08:38:00 idella4 Exp $
+
+  12 Apr 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.3.1-r5.ebuild,
+  xen-tools-4.3.1-r6.ebuild, xen-tools-4.3.2.ebuild, xen-tools-4.4.0.ebuild:
+  minor correction to deps
 
 *xen-tools-4.4.0-r1 (12 Apr 2014)
 *xen-tools-4.3.2-r1 (12 Apr 2014)
